@@ -5,12 +5,13 @@ OpenLDAP 2.6.7 Engineering
 	Fixed libldap exit handling with OpenSSL3 (ITS#9952)
 	Fixed libldap with TLS and multiple ldap URIs (ITS#10101)
 	Fixed libldap OpenSSL cipher suite handling (ITS#10094)
+	Fixed libldap timestamps on Windows (ITS#10100)
 	Fixed lloadd to work when resolv.conf is missing (ITS#10070)
 	Fixed lloadd handling of closing connection (ITS#10083)
 	Fixed slapd handling of regex testing in ACLs (ITS#10089)
+	Fixed slapd sync replication with glued database (ITS#10080)
 	Fixed slapd-asyncmeta when remote suffix is empty (ITS#10076)
 	Fixed slapo-dynlist so it can't be global (ITS#10091)
-	Fixed slapd sync replication with glued database (ITS#10080)
 	Build
 		Fixed lloadd type mismatches (ITS#10074)
 		Fixed builds for Windows (ITS#10117)
